--- a/commit-versus-coverage.html
+++ b/commit-versus-coverage.html
@@ -53,7 +53,8 @@
 
         // 5. Load Data: https://d3-wiki.readthedocs.io/zh_CN/master/CSV/
         d3.csv("viz-test-data/coverageGrouped.csv", function (error, data) {
-
+            if (error) throw error;
+            
             // 6. Gets all headers except Commit (can be set manually if needed to). Can to used for column selection.
             var headers = ["Statement Coverage %", "Branch Coverage %", "Function Coverage %", "Line Coverage %"];
 
