Moved files around for viz, and added directories

--- a/visualization/commit-versus-coverage.html
+++ b/visualization/commit-versus-coverage.html
@@ -59,7 +59,7 @@
 
 
         // 5. Load Data: https://d3-wiki.readthedocs.io/zh_CN/master/CSV/
-        d3.csv("viz-test-data/coverageGrouped.csv", function (error, data) {
+        d3.csv("../visualization-data-output/coverageGrouped.csv", function (error, data) {
             if (error) throw error;
 
             // 6. Gets all headers except Commit (can be set manually if needed to). Can to used for column selection.
