Added font changes to more consistent one, using helvetica

--- a/visualization/commit-versus-testrunmemory.html
+++ b/visualization/commit-versus-testrunmemory.html
@@ -134,8 +134,7 @@
                     .attr("x", width / 2)
                     .attr("y", -10)
                     .attr("transform", "rotate(0)")
-                    .style('font', "sans-serif")
-                    .style("font", "14px times")
+                    .style('font', "14 px helvetica")
                     .style("font-weight", "bold")
                     .style("text-anchor", "end")
                     .style("text-decoration", "underline")
