--- a/visualization/commit-versus-teststatus.html
+++ b/visualization/commit-versus-teststatus.html
@@ -98,7 +98,7 @@
                     .attr("x", width / 2)
                     .attr("y", height + 30)
                     .attr("transform", "rotate(0)")
-                    .style('font', "9px sans-serif")
+                    .style('font', "9px helvetica")
                     .style("font-weight", "bold")
                     .style("text-anchor", "end")
                     .text("Number of Tests");
@@ -108,8 +108,7 @@
                     .attr("x", width / 2)
                     .attr("y", 0)
                     .attr("transform", "rotate(0)")
-                    .style('font', "sans-serif")
-                    .style("font", "14px times")
+                    .style('font', "14 px helvetica")
                     .style("font-weight", "bold")
                     .style("text-anchor", "end")
                     .style("text-decoration", "underline")
@@ -127,7 +126,7 @@
                     .attr("y", -10)
                     .attr("transform", "rotate(0)")
                     .style("text-anchor", "end")
-                    .style('font', "9px sans-serif")
+                    .style('font', "9px helvetica")
                     .style("font-weight", "bold")
                     .text("Commit");
 
@@ -135,7 +134,7 @@
                 var div = d3.select('body').append('div')
                     .style('position', "absolute")
                     .style('text-align', "center")
-                    .style('font', "9px sans-serif")
+                    .style('font', "9px helvetica")
                     .style('border-radius', "5px")
                     .style('padding', "5px")
                     .style('background', "#000000")
@@ -211,7 +210,7 @@
                     .attr("x", width + 100)
                     .attr("y", 9)
                     .attr("dy", ".32em")
-                    .style('font', "9px sans-serif")
+                    .style('font', "9px helvetica")
                     .style("text-anchor", "end")
                     .text(function (d) { return d; });
             })
