--- a/visualization/commit-versus-coverage.html
+++ b/visualization/commit-versus-coverage.html
@@ -139,8 +139,7 @@
                     .attr("x", width / 2)
                     .attr("y", -10)
                     .attr("transform", "rotate(0)")
-                    .style('font', "sans-serif")
-                    .style("font", "14px times")
+                    .style('font', "20 px helvetica")
                     .style("font-weight", "bold")
                     .style("text-anchor", "end")
                     .style("text-decoration", "underline")
